--- a/template.yaml
+++ b/template.yaml
@@ -19,7 +19,7 @@ Resources:
       Runtime: java8
       AutoPublishAlias: live
       DeploymentPreference:
-        Type: Canary10Percent5Minutes
+        Type: Canary10Percent10Minutes
         Alarms:
           - !Ref CanaryErrorsAlarm
       MemorySize: 512
